Created a new command - make:view
* Model calls this new command instead of creating it explicitly in the class
* Created a stub for views
* Added myself as an author

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,10 @@
         {
             "name": "Ben Sherred",
             "email": "ben@sherred.co.uk"
+        },
+        {
+            "name": "ShawnCZek",
+            "email": "shawnczek@truckersmp.com"
         }
     ],
     "require": {}
