Added auto-discovery support and renamed service provider

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,12 @@
             "email": "shawnczek@truckersmp.com"
         }
     ],
-    "require": {}
+    "require": {},
+    "extra": {
+        "laravel": {
+            "providers": [
+                "BenSherred\\MakeModel\\MakeModelServiceProvider"
+            ]
+        }
+    }
 }
